<resources>
    <string name="app_name">IMC Codesa</string>
    <string name="txt_login_usuario">E-mail</string>
    <string name="txt_login_password">Contraseña</string>
    <string name="btn_login_ingresar">Ingresar</string>
    <string name="btn_login_crearcuenta">Crear Cuenta</string>
    <string name="txt_registro_nombre">Nombres</string>
    <string name="txt_registro_password">Contraseña</string>
    <string name="txt_registro_usuario">E-mail</string>
    <string name="btn_registro_crearcuenta">Crear Cuenta</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_lista">ListaActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nombre">Nombre</string>
    <string name="peso">Peso</string>
    <string name="estatura">Estatura</string>
    <string name="resultado_imc">Resultado IMC</string>
    <string name="guardar">Calcular</string>
    <string name="calcular_imc">Calcular IMC</string>

    <string name="opcion_imagen_perfil_galeria">Galeria de Imagenes</string>
    <string name="opcion_imagen_perfil_camara">Camara</string>
    <string name="opcion_imagen_perfil_titulo">Selecciona</string>
</resources>
